<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="165dp"
            android:layout_height="160dp"
            android:src="@drawable/logoites" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/ingreso_usuario"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/Usuario_ingreso"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ingreso_contraseña"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/Contraseña_ingreso"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingreso_iniciosesion"
            android:backgroundTint="#6110D3"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="32sp"
            android:textSize="20sp"
            android:id="@+id/Login_btn"/>


    </LinearLayout>





</RelativeLayout>